#ifndef MEDIA_FILE_VIEW_H
#define MEDIA_FILE_VIEW_H

#include "BaseView.hpp"
#include "MediaFile.hpp"
#include <vector>
#include <memory>

enum MediaFileMenu {
    BACK_FROM_MEDIA,
    PLAY_SONG_FROM_FILES,
    SHOW_DETAIL,
    NEXT_PAGE,
    PREV_PAGE
};

class MediaFileView : public BaseView {
public:
    void showMediaFilesPage(const std::vector<std::shared_ptr<MediaFile>>& files, size_t currentPage, size_t firstSong, size_t lastSong);
    void showMenu() override;
    void hideMenu() override;
    ~MediaFileView() override = default;
};
#endif // MEDIA_FILE_VIEW_H
