@startuml view

package View {
    class BaseView { 
        - statusView: bool
        + showMenu(): virtual void
        + hideMenu(): virtual void
        + isShown(): bool
    }

    class ScanfOptionView {
        + showMenu(): void
        + hideMenu(): void
    }

    class MainMenuView {
        + showMenu(): void
        + hideMenu(): void
    }

    class MediaFileView {
        + showMenu(): void
        + hideMenu(): void
        + showMediaFilesPage(files: vector<shared_ptr<MediaFile>>, page: int): void
    }

    class PlaylistView {
        + showMenu(): void
        + hideMenu(): void
        + showPlaylistList(playlists: vector<shared_ptr<Playlist>>)
    }

    class DetailedPlaylistView {
        + showMenu(): void
        + hideMenu(): void
        + showPlaylistDetails(playlist: shared_ptr<Playlist>): void
        + showListofSongs(playlist: shared_ptr<Playlist>): void
    }

    class PlayingMediaView {
        + showMenu(): void
        + hideMenu(): void
        + showSongInfo(file: MediaFile)
    }

    class MetadataView {
        + showMenu(): void
        + hideMenu(): void
        + showFileMetadata(file: MediaFile): void
    }

    class ViewManager {
        - currentView: BaseView*
        - views : vector<BaseView*>
        + showCurrentMenu(): void
        + switchView(indexView: switch_type): void
        + getDetailedPlaylistView(): DetailedPlaylistView*
        + getMainMenuView(): MainMenuView*
        + getMediaFileView(): MediaFileView*
        + getMetadataView(): MetadataView*
        + getPlayingMediaView(): PlayingMediaView*
        + getPlaylistView(): PlaylistView*
        + getScanfOptionView(): ScanfOptionView*
    }

    ViewManager o--> BaseView
    BaseView <|-- ScanfOptionView
    BaseView <|-- MediaFileView
    BaseView <|-- PlaylistView
    BaseView <|-- DetailedPlaylistView
    BaseView <|-- PlayingMediaView
    BaseView <|-- MetadataView
    BaseView <|-- MainMenuView
}

@enduml
